@@ -1,3 +1,7 @@
+2011-03-24  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Bind some mouse event.
+
 2011-03-19  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (and): Set mouse event for semantic.
